--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
   <groupId>com.github.hemkant</groupId>
   <artifactId>kafka-beginner</artifactId>
+  <packaging>pom</packaging>
   <version>1.0</version>
   <build>
     <plugins>
@@ -19,21 +20,9 @@
       </plugin>
     </plugins>
   </build>
+  <modules>
+    <module>Kafka-Bascis</module>
+    <module>Kafka-Producer-Twitter</module>
+  </modules>
 
-  <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
-    <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka-clients</artifactId>
-      <version>2.4.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.7.28</version>
-     <!-- <scope>test</scope> -->
-    </dependency>
-
-  </dependencies>
 </project>
