--- a/Kafka-Producer-Twitter/pom.xml
+++ b/Kafka-Producer-Twitter/pom.xml
@@ -31,5 +31,13 @@
       <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
       <version>2.2.0</version> <!-- or whatever the latest version is -->
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams -->
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-streams</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+
   </dependencies>
 </project>
